<resources>
    <string name="app_name">Credit Card Helper</string>
    <string name="card_balance">Enter Card Balance ($)</string>
    <string name="card_yearly_interest">Enter Yearly Interest Rate (%)</string>
    <string name="card_min_payment">Enter Minimum Payment ($)</string>
    <string name="card_final_balance">Final Card Balance ($)</string>
    <string name="card_months_remaining">Months Remaining</string>
    <string name="card_interest_paid">Interest Paid Will Be ($)</string>
    <string name="button_compute">Compute</string>
    <string name="button_clear">Clear</string>
    <string name="default_final_balance_value">0.00</string>
    <string name="default_months_remaining_value">0</string>
    <string name="default_interet_paid_value">0.00</string>
</resources>
