<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credit_card_helper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditCardHelperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_balance" />

            <EditText
                android:id="@+id/cardBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_yearly_interest" />

            <EditText
                android:id="@+id/cardYearlyInterestRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_min_payment" />

            <EditText
                android:id="@+id/cardMinimumPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_final_balance" />

            <EditText
                android:id="@+id/cardFinalBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="number"
                android:text="@string/default_final_balance_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_months_remaining" />

            <EditText
                android:id="@+id/cardMonthsRemaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="number"
                android:text="@string/default_months_remaining_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_text_view"
                android:text="@string/card_interest_paid" />

            <EditText
                android:id="@+id/cardInterestPaid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/weight_edit_text"
                android:inputType="number"
                android:text="@string/default_interet_paid_value" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/compute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_compute" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear" />

    </LinearLayout>
</ScrollView>